# bitwise-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DoxyPress.json  LICENSE  README.md  bitwise.sublime-project
cmake/: Config.cmake  Macros.cmake  System.cmake  platform.cmake  system.cmake
cmake/macros/: Common.cmake  Engine.cmake  Sample.cmake  Test.cmake  engine_module.cmake  platform_config.cmake  sample.cmake
doc/: class.cpp  class.h  namespace.h  symbols.txt  template.h  test_case.cpp
engine/: .gitignore  CMakeLists.txt  Doxyfile.in  android.lua  build.lua  build_android.lua  build_linux.lua  build_windows.lua
engine/base/: CMakeLists.txt
engine/base/include/Bw/: Base.h  Bw.h
engine/base/src/Bw/: Base.cpp
engine/collections/: CMakeLists.txt
engine/collections/include/Bw/: Collections.h
engine/include/Bw/: Base.h  Bw.h  Engine.h  Version.h
engine/include/Bw/Base/: Assert.h  AtomicTypes.h  Common.h  Config.h  Endianness.h  Export.h  Features.h  Integer.h  Memory.h  Module.h  ModuleInit.h  Multithreading.h  PImpl.h  Preprocessor.h  StackTrace.h  String.h  System.h  Test.h  Version.h
engine/include/Bw/Foundation/: Export.h  Module.h  Version.h
engine/main/: CMakeLists.txt
engine/memory/: CMakeLists.txt
engine/memory/include/Bw/: Memory.h
engine/memory/src/Bw/: Memory.cpp
engine/src/Bw/: Base.cpp  Bw.cpp
engine/src/Bw/Base/: Assert.cpp  BaseModuleInit.cpp  Memory.cpp  Module.cpp  Multithreading.cpp  Test.cpp
engine/src/Bw/Foundation/: Module.cpp
samples/: CMakeLists.txt  build.lua  build_linux.lua
samples/engine/: CMakeLists.txt
samples/engine/assert/: main.cpp
samples/engine/bits/: main.cpp
samples/engine/callstack/: main.cpp
samples/engine/cstring/: main.cpp
samples/engine/logs/: main.cpp
samples/engine/math/: CMakeLists.txt
samples/engine/math/quick_test/: quick_test.cpp
samples/engine/module_core/: main.cpp
samples/engine/module_math/: main.cpp
samples/engine/pointer/: main.cpp
samples/hello-iOS/: AppDelegate.mm  CMakeLists.txt  main.mm
samples/hello-world/: CMakeLists.txt  Test.h  main.cpp
samples/src/Foundation/: main.cpp
samples/src/HelloWorld/: main.cpp
scripts/linux/: build_sublime.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/log_viewer/: log_viewer.sln
src/apps/log_viewer/log_viewer/: Program.cs  log_viewer.csproj
src/apps/log_viewer/log_viewer/Properties/: AssemblyInfo.cs
src/apps/router/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/private/: bitwise.cpp
src/engine/private/bitwise/: collections.cpp  concurrency.cpp  core.cpp  math.cpp  memory.cpp  network.cpp
src/engine/private/bitwise/collections/: CMakeLists.txt  internal.h
src/engine/private/bitwise/concurrency/: CMakeLists.txt  internal.h
src/engine/private/bitwise/core/: CMakeLists.txt  assert.cpp  basic_types.cpp  callstack.cpp  cstring.cpp  default_assert_handler.h  integer.cpp  internal.h  log.cpp  pointer.cpp  real.cpp  to_string.cpp
src/engine/private/bitwise/core/linux/: default_assert_handler.cpp  platform.cpp
src/engine/private/bitwise/core/platform/linux/: default_assert_handler.cpp  system.cpp
src/engine/private/bitwise/core/platform/unix/: console.cpp
src/engine/private/bitwise/core/platform/windows/: callstack.cpp  console.cpp  default_assert_handler.cpp  system.cpp  windows_assert.cpp  windows_assert_handler.cpp  windows_callstack.cpp  windows_console.cpp  windows_cstring.cpp  windows_system.cpp
src/engine/private/bitwise/log/: CMakeLists.txt  internal.h  log.cpp
src/engine/private/bitwise/math/: CMakeLists.txt  internal.h  test.cpp  vector2.cpp
src/engine/private/bitwise/memory/: CMakeLists.txt  global_allocators.cpp  heap_allocator.cpp  internal.h  page_allocator.cpp  trace_allocator.cpp
src/engine/private/bitwise/memory/platform/windows/: windows_alloc.cpp  windows_page_allocator.cpp  windows_valloc.cpp
src/engine/private/bitwise/network/: CMakeLists.txt  internal.h
src/engine/private/bitwise/network/platform/windows/tcp/: windows_tcp_server.cpp  windows_tcp_types.h
src/engine/public/: bitwise.h
src/engine/public/bitwise/: collections.h  concurrency.h  core.h  log.h  math.h  memory.h  network.h
src/engine/public/bitwise/collections/: array.h  list.h
src/engine/public/bitwise/collections/array/: array.inl
src/engine/public/bitwise/collections/list/: list.inl  list_iterator.h  list_iterator.inl  list_node.h
src/engine/public/bitwise/core/: assert.h  assert_handler.h  backtrace.h  basic_types.h  bit.h  bit.inl  callstack.h  console.h  console.inl  cstring.h  cstring.inl  export.h  fwd.h  integer.h  integer.inl  log.h  macros.h  platform.h  pointer.h  real.h  real.inl  system.h
src/engine/public/bitwise/core/platform/unix/: cstring.inl
src/engine/public/bitwise/core/platform/windows/: cstring.inl
src/engine/public/bitwise/core/unix/: cstring.inl
src/engine/public/bitwise/log/: log.h  log.inl  log_channel.h  log_priority.h  output.h  priority.h
src/engine/public/bitwise/math/: test.h  vector2.h
src/engine/public/bitwise/memory/: allocator.h  allocator.inl  fwd.h  global_allocators.h  heap_allocator.h  page_allocator.h  scope_allocator.h  scope_allocator.inl  trace_allocator.h
src/engine/public/bitwise/network/: module_internal.h
src/engine/public/bitwise/network/tcp/: tcp_client.h  tcp_client_config.h  tcp_server.h  tcp_server_config.h
src/samples/: CMakeLists.txt
src/samples/engine/: CMakeLists.txt
src/samples/engine/test_sample/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt
src/tests/engine/: CMakeLists.txt
src/tests/engine/core/: CMakeLists.txt  bit.cpp  integer.cpp  real.cpp
src/tests/engine/memory/: CMakeLists.txt  page_allocator.cpp
tests/: CMakeLists.txt  build.lua  build_linux.lua  build_windows.lua
tests/base/: CMakeLists.txt  CString.h
tests/collections/: Array.h  CMakeLists.txt  Runner.cpp
tests/include/Base/: AllTests.h  Signal.h
tests/include/BwTests/Base/: AllTests.h  Endianess.h
tests/src/Base/: main.cpp
tests/src/BwTests/Base/: main.cpp
tests/src/Foundation/: main.cpp
(+147 files in other folders)
