# ===============================================================================
#  Engine
# ===============================================================================
add_subdirectory("engine")

# ===============================================================================
#  Tests
# ===============================================================================
if (BW_BUILD_TESTS)
    set(BW_TESTS_SRC_DIR "${BW_SRC_DIR}/tests")
    add_subdirectory("tests")
endif()

# ===============================================================================
#  Samples
# ===============================================================================
if (BW_BUILD_SAMPLES)
    set(BW_SAMPLES_SRC_DIR "${BW_SRC_DIR}/samples")
    add_subdirectory("samples")
endif()